# unet-segmentation

./: .env.example  .gitattributes  .gitignore  README.rst  environment.yml  requirements.txt  setup.cfg
scripts/: background.py
src/zzsn2021/: main.py
src/zzsn2021/configs/: register.py
src/zzsn2021/configs/experiment/: __init__.py  unet.yaml
src/zzsn2021/configs/lightning/: __init__.py
src/zzsn2021/datamodules/humans_matting/: datamodule.py
src/zzsn2021/datasets/humans_matting/: dataset.py
src/zzsn2021/models/: __init__.py  unet.py
src/zzsn2021/systems/: __init__.py  segmentor.py
src/zzsn2021/utils/: rundir.py
trained_cpkts/: unet_11_epochs.cpkt
