[metadata]
name = zzsn2021-template
version = attr: zzsn2021.__version__
description = Neural network template with PyTorch Lightning, Hydra & wandb support
long_description = file: README.rst
author = Karol J. Piczak
author-email = karol@piczak.com
url = https://github.com/2021L-ZZSN/template
license = MIT
license-file = LICENSE
platform = any
keywords = neural networks, PyTorch Lightning, Hydra, wandb, code template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/2021L-ZZSN/template/issues


[options.packages.find]
where = src
